hphp/test/zend/good/ext/standard/tests/array/locale_sort.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') {
  die("skip Unix locale name only, not available on windows (and crashes with VC6)\n");
}
if (false == setlocale(LC_CTYPE, "fr_FR.ISO8859-1", "fr_FR")) {
  die("skip setlocale() failed\n");
}
?>